# axum-sample

./: .env  Cargo.toml  README.md
migrations/: 20240923074305_orders.sql
src/: main.rs
src/configuration/: database.rs
src/order/: mod.rs
src/orders/: mod.rs  order.rs  repository.rs
