[package]
name = "axum-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
